# ValaisSun

./: .gitignore  CMakeLists.txt  GoogleMapOverlay.html  LICENSE  README.md  scraps.txt
sources/: compute_horizons.cpp  crunch.cpp  height_map.cpp  height_map.hpp  import_heightmap.hpp  import_heightmap_horizon.hpp  light.cpp  main.cpp  mountain_outline.cpp  position.hpp  swiss_to_lat_lon.hpp  vector3d.hpp  vectorHM.hpp
